fix navigation from login to home

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="flex flex-col gap-3.5 my-[50px]">
-                <a href="/login.html" class="inline-block"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></a>
+                <a href="/" class="inline-block"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></a>
                 <a href="/register.html" class="inline-block"><span class="btn-white cursor-pointer text-base font-bold">Create New Account</span></a>
 
             </div>
