fix button and effect hover

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                     <textarea placeholder="What is happening uy?!" id="search" class="w-full h-[100px] py-3 text-white bg-primary text-base placeholder:text-lg focus:outline-none focus:ring-0 focus:font-semibold resize-none focus:border-transparent overflow-hidden"></textarea>
                 </div>
-                <div class="flex justify-between items-center px-[66px] pt-[17px] w-[484px]">
-                    <div class="flex justify-center items-center gap-2.5 pr-[160px]">
+                <div class="w-[90%] flex justify-between items-center ml-[66px] pt-[17px] w-[484px]">
+                    <div class="flex justify-center items-center gap-2.5">
                         <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
                             <p>🤩</p>
                             <p class="text-sm font-semibold">Happy</p>
@@ -87,21 +87,25 @@
                             <p class="text-sm font-semibold">Shock</p>
                         </div>
                     </div>
-                    <span class="btn-blue cursor-pointer font-bold">Post</span>
+                    <a href="#">
+                        <span class="btn-blue cursor-pointer font-bold">Post</span>
+                    </a>
                 </div>
             </div>
 
             <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-start">
-                    <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
-                    <div class="pl-2">
-                        <div class="flex gap-1">
-                            <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                            <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
+                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                            </div>
+                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
-                        <p class="text-username text-sm w-[200px]">@bwa • 12 Jan 2024</p>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
+                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
@@ -115,19 +119,25 @@
                             <img src="/assets/heart-fill.svg" alt="heart">
                             <p class="text-sm font-normal text-like">22 Likes</p>
                         </div>
+                        <div class="flex justify-center items-center w-[93px] gap-1.5">
+                            <img src="/assets/trash.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Delete</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-start">
-                    <img src="./assets/man2.png" alt="search" srcset="" class="w-26 h-26 mr-3">
-                    <div class="pl-2">
-                        <div class="flex gap-1">
-                            <p class="text-base font-bold inline-block">Masayoshi</p>
-                            <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/man2.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">Masayoshi</p>
+                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                            </div>
+                            <p class="text-username text-sm">@masayoshi • 12 Jan 2024</p>
                         </div>
-                        <p class="text-username text-sm w-[200px]">@masayoshi • 12 Jan 2024</p>
                     </div>
                     <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
                         <p>😥</p>
@@ -154,14 +164,16 @@
             </div>
 
             <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-start">
-                    <img src="./assets/girl3.png" alt="search" srcset="" class="w-26 h-26 mr-3">
-                    <div class="pl-2">
-                        <div class="flex gap-1">
-                            <p class="text-base font-bold inline-block">Alqowy</p>
-                            <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/girl3.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">Alqowy</p>
+                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                            </div>
+                            <p class="text-username text-sm">@alqowy • 12 Jan 2024</p>
                         </div>
-                        <p class="text-username text-sm w-[200px]">@alqowy • 12 Jan 2024</p>
                     </div>
                     <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
                         <p>🤯</p>
@@ -188,16 +200,18 @@
             </div>
 
             <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-start">
-                    <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
-                    <div class="pl-2">
-                        <div class="flex gap-1">
-                            <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                            <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
+                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                            </div>
+                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
-                        <p class="text-username text-sm w-[200px]">@bwa • 12 Jan 2024</p>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
+                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
@@ -222,16 +236,18 @@
             </div>
 
             <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-start">
-                    <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
-                    <div class="pl-2">
-                        <div class="flex gap-1">
-                            <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                            <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
+                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                            </div>
+                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
-                        <p class="text-username text-sm w-[200px]">@bwa • 12 Jan 2024</p>
                     </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
+                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
                         <p>🤩</p>
                         <p class="text-sm font-semibold">Happy</p>
                     </div>
@@ -276,7 +292,10 @@
                                     <p class="text-username text-sm">@shayna</p>
                                 </div>
                             </div>
-                            <span class="btn-white-small cursor-pointer">Follow</span>
+
+                            <a href="#">
+                                <span href="#" class="btn-white-small cursor-pointer">Follow</span>
+                            </a>
                         </div>
 
                         <div class="flex justify-between items-center">
@@ -287,7 +306,10 @@
                                     <p class="text-username text-sm">@masayoshi</p>
                                 </div>
                             </div>
-                            <span class="btn-white-small cursor-pointer">Follow</span>
+
+                            <a href="#">
+                                <span href="#" class="btn-white-small cursor-pointer">Follow</span>
+                            </a>
                         </div>
 
                         <div class="flex justify-between items-center">
@@ -298,7 +320,10 @@
                                     <p class="text-username text-sm">@ramina</p>
                                 </div>
                             </div>
-                            <span class="btn-white-small cursor-pointer">Follow</span>
+
+                            <a href="#">
+                                <span href="#" class="btn-white-small cursor-pointer">Follow</span>
+                            </a>
                         </div>
 
                         <a href="#" class="text-base font-medium text-link pl-2">Show more</a>
