--- a/profile.html
+++ b/profile.html
@@ -133,8 +133,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -167,8 +166,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -203,8 +201,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -239,8 +236,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -275,8 +271,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
