--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -133,8 +132,7 @@
                         <img src="./assets/man2.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">Masayoshi</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@masayoshi • 12 Jan 2024</p>
                         </div>
@@ -169,8 +167,7 @@
                         <img src="./assets/girl3.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">Alqowy</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">Alqowy <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@alqowy • 12 Jan 2024</p>
                         </div>
@@ -205,8 +202,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -241,8 +237,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga</p>
-                                <img src="/assets/verify.png" alt="" srcset="" class="inline">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
