--- a/login.html
+++ b/login.html
@@ -20,6 +20,7 @@
             </div>
             
             <div class="flex flex-col gap-4">
+
                 <div class="flex flex-col gap-2">
                     <label for="username" class="block text-base font-medium">Username</label>
                     <div class="flex items-center justify-start rounded-full bg-secondary w-[484px]">
@@ -37,9 +38,8 @@
                 </div>
             </div>
             <div class="flex flex-col gap-3.5 my-[50px]">
-                <a href="/" class="inline-block"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></a>
-                <a href="/register.html" class="inline-block"><span class="btn-white cursor-pointer text-base font-bold">Create New Account</span></a>
-
+                <a href="/"><span class="btn-blue cursor-pointer text-base font-bold">Sign In</span></button>
+                <a href="/register.html"><span class="btn-white cursor-pointer text-base font-bold">Create New Account</span></button>
             </div>
 
         </div class="border-2 w-full h-full">
