--- a/profile.html
+++ b/profile.html
@@ -130,7 +130,7 @@
             <div class="bg-primary p-4 border-b-2 border-line">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center justify-start">
-                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
                                 <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
@@ -144,18 +144,18 @@
                     </div>
                 </div>
 
-                <p class="pl-[70px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
-                <div class="flex justify-between items-center px-[66px] w-[484px]">
+                <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
-                        <div class="flex justify-center items-center w-[93px] gap-1.5">
+                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
                             <img src="/assets/heart-fill.svg" alt="heart">
                             <p class="text-sm font-normal text-like">22 Likes</p>
-                        </div>
-                        <div class="flex justify-center items-center w-[93px] gap-1.5">
+                        </a>
+                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
                             <img src="/assets/trash.svg" alt="heart">
                             <p class="text-sm font-normal text-username">Delete</p>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -163,77 +163,7 @@
             <div class="bg-primary p-4 border-b-2 border-line">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center justify-start">
-                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
-                        <div class="pl-2">
-                            <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
-                            </div>
-                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
-                        </div>
-                    </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
-                        <p>😥</p>
-                        <p class="text-sm font-semibold">Sad</p>
-                    </div>
-                </div>
-
-                <p class="pl-[70px] py-2.5 text-base w-[600px]">Javascript susah juga buat pemula</p>
-
-                <div class="flex justify-between items-center px-[66px] w-[484px]">
-                    <div class="flex justify-center items-center gap-2.5 pr-[250px]">
-                        <div class="flex justify-center items-center gap-2.5">
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/heart.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">394 Likes</p>
-                            </div>
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/trash.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">Delete</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center justify-start">
-                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3 rounded-full">
-                        <div class="pl-2">
-                            <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
-                            </div>
-                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
-                        </div>
-                    </div>
-                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5 ml-[280px]">
-                        <p>🤯</p>
-                        <p class="text-sm font-semibold">Shock</p>
-                    </div>
-                </div>
-
-                <p class="pl-[70px] py-2.5 text-base w-[600px]">Besok libur, bisa upgrade skills engineering!!!</p>
-
-                <div class="flex justify-between items-center px-[66px] w-[484px]">
-                    <div class="flex justify-center items-center gap-2.5 pr-[250px]">
-                        <div class="flex justify-center items-center gap-2.5">
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/heart.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">394 Likes</p>
-                            </div>
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/trash.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">Delete</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="bg-primary p-4 border-b-2 border-line">
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center justify-start">
-                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
                                 <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
@@ -247,20 +177,18 @@
                     </div>
                 </div>
 
-                <p class="pl-[70px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 text-base w-[600px]">Javascript susah juga buat pemula</p>
 
-                <div class="flex justify-between items-center px-[66px] w-[484px]">
+                <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
-                        <div class="flex justify-center items-center gap-2.5">
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/heart.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">394 Likes</p>
-                            </div>
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/trash.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">Delete</p>
-                            </div>
-                        </div>
+                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/heart.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">394 Likes</p>
+                        </a>
+                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/trash.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Delete</p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -268,7 +196,7 @@
             <div class="bg-primary p-4 border-b-2 border-line">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center justify-start">
-                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-26 h-26 mr-3">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
                                 <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
@@ -282,20 +210,84 @@
                     </div>
                 </div>
 
-                <p class="pl-[70px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 text-base w-[600px]">Besok libur, bisa upgrade skills engineering!!!</p>
 
-                <div class="flex justify-between items-center px-[66px] w-[484px]">
+                <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
-                        <div class="flex justify-center items-center gap-2.5">
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/heart.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">394 Likes</p>
+                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/heart.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">394 Likes</p>
+                        </a>
+                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/trash.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Delete</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bg-primary p-4 border-b-2 border-line">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
                             </div>
-                            <div class="flex justify-center items-center w-[93px] gap-1.5">
-                                <img src="/assets/trash.svg" alt="heart">
-                                <p class="text-sm font-normal text-username">Delete</p>
-                            </div>
+                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
+                    </div>
+                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                        <p>🤩</p>
+                        <p class="text-sm font-semibold">Happy</p>
+                    </div>
+                </div>
+
+                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+
+                <div class="flex justify-between items-center pl-[55px] w-[484px]">
+                    <div class="flex justify-center items-center gap-2.5 pr-[250px]">
+                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/heart.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">394 Likes</p>
+                        </a>
+                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/trash.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Delete</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bg-primary p-4 border-b-2 border-line">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center justify-start">
+                        <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
+                        <div class="pl-2">
+                            <div class="flex gap-1">
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                            </div>
+                            <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
+                        </div>
+                    </div>
+                    <div class="flex justify-center items-center w-[93px] h-[33px] rounded-full border-line border-2 gap-1.5">
+                        <p>🤩</p>
+                        <p class="text-sm font-semibold">Happy</p>
+                    </div>
+                </div>
+
+                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+
+                <div class="flex justify-between items-center pl-[55px] w-[484px]">
+                    <div class="flex justify-center items-center gap-2.5 pr-[250px]">
+                        <a href="#" class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/heart.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">394 Likes</p>
+                        </a>
+                        <a href="#"  class="flex justify-start items-center w-[93px] gap-1.5">
+                            <img src="/assets/trash.svg" alt="heart">
+                            <p class="text-sm font-normal text-username">Delete</p>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -359,40 +351,39 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col p-3.5 rounded-[16px] bg-secondary">
-                    <div class="flex flex-col gap-3.5">
-                        <h2 class="font-bold text-lg">Indonesia trends</h2>
+                <div class="flex flex-col rounded-[16px] bg-secondary">
+                    <div class="flex flex-col py-3.5">
+                        <h2 class="font-bold text-lg pb-[7px] px-3.5">Indonesia trends</h2>
 
-                        <div class="flex justify-between items-center">
-                            <div class="flex">
-                                <div class="pl-2">
+                        <a href="#" class="flex justify-between items-center hover:bg-gray-800">
+                            <div class="flex px-3.5 py-[7px]">
+                                <div class="">
                                     <p class="text-username text-sm">1 • Trending</p>
                                     <p class="text-base font-bold">belajar javascript di bwa</p>
                                     <p class="text-username text-sm">14K posts</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
-                        <div class="flex justify-between items-center">
-                            <div class="flex">
-                                <div class="pl-2">
+                        <a href="#" class="flex justify-between items-cente hover:bg-gray-800">
+                            <div class="flex px-3.5 py-[7px]">
+                                <div class="">
                                     <p class="text-username text-sm">2 • Trending</p>
                                     <p class="text-base font-bold">kerja remote itu asik</p>
                                     <p class="text-username text-sm">14K posts</p>
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
-                        <div class="flex justify-between items-center">
-                            <div class="flex">
-                                <div class="pl-2">
+                        <a href="#" class="flex justify-between items-center hover:bg-gray-800">
+                            <div class="flex px-3.5 py-[7px]">
+                                <div class="">
                                     <p class="text-username text-sm">3 • Trending</p>
                                     <p class="text-base font-bold">bwa banyak kelas gratis</p>
                                     <p class="text-username text-sm">14K posts</p>
                                 </div>
                             </div>
-                        </div>
-
+                        </a>
                     </div>
                 </div>
             </div>
