--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="bg-primary text-white">
+<body class="max-w-7xl mx-auto bg-primary text-white">
 
-    <section class="px-[75px] w-full flex justify-between">
-
+    <section class="px-[75px] min-w-fit flex justify-between">
         <!-- Sidebar -->
-        <div class="w-[500px]">
+        <div class="min-w-[230px]">
             <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
             <div class="flex flex-col gap-[30px]">
                 <a href="#" class="flex gap-4">
@@ -43,7 +42,7 @@
                     <p class="text-xl">Bookmarks</p>
                 </a>
 
-                <a href="#" class="flex gap-4">
+                <a href="#" class="flex gap-4 w-[179px]">
                     <img src="/assets/crown-light.svg" alt="" class="w-7 h7">
                     <p class="text-xl">Communities</p>
                 </a>
@@ -61,7 +60,7 @@
         </div>
 
         <!-- Feeds -->
-        <div class="w-[970px] h-fit border-2 border-line">
+        <div class="h-fit border-2 border-line">
             <div class="flex justify-center gap-[150px] pt-[20px] border-b-2 border-line">
                 <a href="#" class="px-2.5 pb-3.5 text-base font-bold border-b-4 border-link">For You</a>
                 <a href="#" class="px-2.5 pb-3.5 text-base font-bold text-username">Following</a>
@@ -110,7 +109,7 @@
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -209,7 +208,7 @@
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -242,7 +241,7 @@
                     </div>
                 </div>
 
-                <p class="pl-[55px] py-2.5 text-base w-[600px]">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
+                <p class="pl-[55px] py-2.5 text-base">Halo semuanya, dalam merayakan ulang tahun BuildWithAngga ke-4 maka kami telah merilis 6 kelas gratis terbaru untuk dipelajari tahun ini.</p>
 
                 <div class="flex justify-between items-center pl-[55px] w-[484px]">
                     <div class="flex justify-center items-center gap-2.5 pr-[250px]">
@@ -261,7 +260,7 @@
         </div>
 
         <!-- Browse -->
-        <div class="w-[320px]">
+        <div class="w-[300px]">
             <div class="pl-[30px] flex flex-col gap-5 py-[30px]">
                 <div class="flex items-center justify-start rounded-full bg-secondary">
                     <img src="./assets/search-normal-dim.svg" alt="search" srcset="" class="w-26 h-26 pl-4 mr-3">
@@ -375,6 +374,9 @@
                 </div>
             </div>
         </div>
+
+
+
     </section>
 
 </body>
