--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="bg-primary text-white">
+<body class="max-w-7xl mx-auto bg-primary text-white">
 
     <section class="px-[150px] py-[130px] flex justify-center items-center w-full h-[100vh] gap-x-[100px]">
         <div class="w-[484px] h-[571px] py-[48px]">
