--- a/profile.html
+++ b/profile.html
@@ -10,12 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="bg-primary text-white">
+<body class="max-w-7xl mx-auto bg-primary text-white">
 
-    <section class="px-[75px] w-full flex justify-between">
+    <section class="px-[75px] min-w-fit flex justify-between">
 
         <!-- Sidebar -->
-        <div class="w-[500px]">
+        <div class="min-w-[230px]">
             <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
             <div class="flex flex-col gap-[30px]">
                 <a href="#" class="flex gap-4">
@@ -58,7 +58,7 @@
                     <p class="text-xl">Sign Out</p>
                 </a>
 
-                <a href="#" class=" w-[250px]">
+                <a href="#" class="w-[200px]">
                     <span class="btn-blue cursor-pointer text-base font-bold">New Tweet</span>
                 </a>
                 
@@ -66,7 +66,7 @@
         </div>
 
         <!-- Feeds -->
-        <div class="w-[970px] h-fit border-2 border-line">
+        <div class="h-fit border-2 border-line">
             <div class="relative border-b-2 border-line">
 
                 <div class="bg-cover bg-center w-full h-[200px]" style="background-image: url(/assets/cover.png)"></div>
@@ -295,7 +295,7 @@
         </div>
 
         <!-- Browse -->
-        <div class="w-[320px]">
+        <div class="w-[300px]">
             <div class="pl-[30px] flex flex-col gap-5 py-[30px]">
                 <div class="flex items-center justify-start rounded-full bg-secondary">
                     <img src="./assets/search-normal-dim.svg" alt="search" srcset="" class="w-26 h-26 pl-4 mr-3">
