--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -131,7 +131,7 @@
                         <img src="./assets/man2.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@masayosh • 12 Jan 2024</p>
                         </div>
@@ -164,7 +164,7 @@
                         <img src="./assets/girl3.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">Alqowy <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">Alqowy <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@Alqowy • 12 Jan 2024</p>
                         </div>
@@ -197,7 +197,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -230,7 +230,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -260,7 +260,7 @@
         </div>
 
         <!-- Browse -->
-        <div class="w-[300px]">
+        <div class="w-[320px]">
             <div class="pl-[30px] flex flex-col gap-5 py-[30px]">
                 <div class="flex items-center justify-start rounded-full bg-secondary">
                     <img src="./assets/search-normal-dim.svg" alt="search" srcset="" class="w-26 h-26 pl-4 mr-3">
@@ -274,7 +274,7 @@
                             <div class="flex">
                                 <img src="/assets/girl1.png" alt="" class="w-[46px] h-[46px] rounded-full">
                                 <div class="pl-2">
-                                    <p class="text-base font-bold">Shayna <img src="/assets/verify.png" alt="" srcset="" class="inline"></p>
+                                    <p class="text-base font-bold">Shayna <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 w-5 rounded-full"></p>
                                     <p class="text-username text-sm">@shayna</p>
                                 </div>
                             </div>
@@ -288,7 +288,10 @@
                             <div class="flex">
                                 <img src="/assets/man1.png" alt="" class="w-[46px] h-[46px] rounded-full">
                                 <div class="pl-2">
-                                    <p class="text-base font-bold">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline"></p>
+                                    <div>
+                                        <p class="text-base font-bold">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 w-5 rounded-full"></p>
+
+                                    </div>
                                     <p class="text-username text-sm">@masayoshi</p>
                                 </div>
                             </div>
@@ -302,7 +305,7 @@
                             <div class="flex">
                                 <img src="/assets/girl2.png" alt="" class="w-[46px] h-[46px] rounded-full">
                                 <div class="pl-2">
-                                    <p class="text-base font-bold">Ramina <img src="/assets/verify.png" alt="" srcset="" class="inline"></p>
+                                    <p class="text-base font-bold">Ramina <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 w-5 rounded-full"></p>
                                     <p class="text-username text-sm">@ramina</p>
                                 </div>
                             </div>
