--- a/profile.html
+++ b/profile.html
@@ -133,7 +133,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -166,7 +166,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -199,7 +199,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -232,7 +232,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -265,7 +265,7 @@
                         <img src="./assets/bwa-profile.png" alt="search" srcset="" class="w-[46px] h-[46px] rounded-full">
                         <div class="pl-2">
                             <div class="flex gap-1">
-                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-[24] h-[24] rounded-full"> </p>
+                                <p class="text-base font-bold inline-block">BuildWithAngga <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 h-5 rounded-full"> </p>
                             </div>
                             <p class="text-username text-sm">@bwa • 12 Jan 2024</p>
                         </div>
@@ -309,7 +309,7 @@
                             <div class="flex">
                                 <img src="/assets/girl1.png" alt="" class="w-[46px] h-[46px] rounded-full">
                                 <div class="pl-2">
-                                    <p class="text-base font-bold">Shayna <img src="/assets/verify.png" alt="" srcset="" class="inline"></p>
+                                    <p class="text-base font-bold">Shayna <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 w-5 rounded-full"></p>
                                     <p class="text-username text-sm">@shayna</p>
                                 </div>
                             </div>
@@ -323,7 +323,7 @@
                             <div class="flex">
                                 <img src="/assets/man1.png" alt="" class="w-[46px] h-[46px] rounded-full">
                                 <div class="pl-2">
-                                    <p class="text-base font-bold">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline"></p>
+                                    <p class="text-base font-bold">Masayoshi <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 w-5 rounded-full"></p>
                                     <p class="text-username text-sm">@masayoshi</p>
                                 </div>
                             </div>
@@ -337,7 +337,7 @@
                             <div class="flex">
                                 <img src="/assets/girl2.png" alt="" class="w-[46px] h-[46px] rounded-full">
                                 <div class="pl-2">
-                                    <p class="text-base font-bold">Ramina <img src="/assets/verify.png" alt="" srcset="" class="inline"></p>
+                                    <p class="text-base font-bold">Ramina <img src="/assets/verify.png" alt="" srcset="" class="inline w-5 w-5 rounded-full"></p>
                                     <p class="text-username text-sm">@ramina</p>
                                 </div>
                             </div>
