--- a/login.html
+++ b/login.html
@@ -23,16 +23,16 @@
                 <div class="flex flex-col gap-2">
                     <label for="username" class="block text-base font-medium">Username</label>
                     <div class="flex items-center justify-start rounded-full bg-secondary">
-                        <img src="./assets/crown.svg" alt="crown" srcset="" class="w-26 h-26 pl-4 mr-3">
-                        <input type="text" placeholder="Username" id="username" class=" h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                        <img src="./assets/crown-blur.svg" alt="lock" srcset="" class="w-6 h-6 ml-4 mr-3">
+                        <input type="text" placeholder="Username" id="username" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
 
                 <div class="flex flex-col gap-2">
                     <label for="password" class="block text-base font-medium">Password</label>
                     <div class="flex items-center justify-start rounded-full bg-secondary">
-                        <img src="./assets/lock.svg" alt="lock" srcset="" class="w-26 h-26 pl-4 mr-3">
-                        <input type="password" placeholder="Password" id="password" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
+                        <img src="./assets/lock.svg" alt="lock" srcset="" class="w-6 h-6 ml-4 mr-3">
+                        <input type="password" placeholder="Password" id="password" class="w-[484px] h-[48px] py-3 text-white bg-secondary text-base placeholder:text-base placeholder:text-paragraph rounded-full focus:outline-none focus:ring-0 focus:font-semibold"/>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <div class=" w-fit h-fit border-2 border-line">
+        <div class=" w-fit h-fit">
             <h1 class="font-extrabold text-[120px]">
                 twittr.
             </h1>
