add href in index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h2 class="font-bold text-[28px] py-[30px]">twittr.</h2>
             </a>
             <div class="flex flex-col gap-[30px]">
-                <a href="#" class="flex gap-4">
+                <a href="/index.html" class="flex gap-4">
                     <img src="/assets/home-hashtag.svg" alt="" class="w-7 h7">
                     <p class="text-xl active-sidebar">Home</p>
                 </a>
@@ -49,7 +49,7 @@
                     <p class="text-xl">Communities</p>
                 </a>
 
-                <a href="#" class="flex gap-4">
+                <a href="/profile.html" class="flex gap-4">
                     <img src="/assets/profile-circle.svg" alt="" class="w-7 h7">
                     <p class="text-xl">Profile</p>
                 </a>
