fix href in register

--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
 
             <div class="flex flex-col gap-3.5 mt-[50px]">
                 <a href="/"><span class="btn-blue cursor-pointer text-base font-bold">Create Account</span></button>
-                <a href="/register.html"><span class="btn-white cursor-pointer text-base font-bold">Sign In to My Account</span></a>
+                <a href="/login.html"><span class="btn-white cursor-pointer text-base font-bold">Sign In to My Account</span></a>
             </div>
         </div>
 
